src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Activities_I_Manage__c</fullName>
        <formula>IF(
				AND($User.MarketingID__c &lt;&gt; null, CONTAINS(Owner:User.MarketingID__c,$User.MarketingID__c))
				|| 
				AND($User.MarketingID2__c &lt;&gt; null, CONTAINS(Owner:User.MarketingID2__c,$User.MarketingID2__c))
				, 
				&quot;True&quot;, 
				&quot;False&quot;)</formula>
        <label>Activities I Manage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Owner_Role__c</fullName>
        <description>Role of Activity Owner, used in calculating Last Activity Date by LOB</description>
        <formula>Owner:User.UserRole.Name</formula>
        <label>Activity Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLS4SF__ClearSlide_Activity_Type__c</fullName>
        <label>ClearSlide Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ClearSlide Email</fullName>
                    <default>true</default>
                    <label>ClearSlide Email</label>
                </value>
                <value>
                    <fullName>ClearSlide Meeting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CLS4SF__ClearSlide_Content_Link_Clicked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ClearSlide Content Link Clicked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLS4SF__ClearSlide_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ClearSlide Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLS4SF__ClearSlide_Email_Opened__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ClearSlide Email Opened</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLS4SF__ClearSlide_Engagement_Time_in_Minutes__c</fullName>
        <formula>CLS4SF__ClearSlide_Engagement_Time_in_Seconds__c  / 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ClearSlide Engagement Time (Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLS4SF__ClearSlide_Engagement_Time_in_Seconds__c</fullName>
        <label>ClearSlide Engagement Time in Seconds</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLS4SF__ClearSlide_Forecast_Category__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ClearSlide Forecast Category</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CLS4SF__ClearSlide_Opportunity_Stage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ClearSlide Opportunity Stage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Classification_Note__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Classification Note</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Office Work</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Trade Show</fullName>
                </value>
                <value>
                    <fullName>Community Outreach</fullName>
                </value>
                <value>
                    <fullName>University Outreach</fullName>
                </value>
                <value>
                    <fullName>Customer Support</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Outcome of event.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Created_Date_Time__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DSRecordingURL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DSRecordingURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DialSource__Call_Campaign_DS__c</fullName>
        <description>The name of the Call Campaign the record was called from</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Call Campaign</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DialSource__Call_Disposition_DS__c</fullName>
        <description>Name of the disposition clicked for this call</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Call Disposition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DialSource__Call_Ended_DS__c</fullName>
        <description>Time stamp indicating when the call ended</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Call Ended</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DialSource__Call_ID_DS__c</fullName>
        <description>External ID for the logged call used for troubleshooting purposes</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Call ID</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DialSource__Call_Placed_DS__c</fullName>
        <description>Time stamp indicating when the call was initially placed</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Call Placed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DialSource__Call_Started_DS__c</fullName>
        <description>Time stamp of when the call was connected to the prospect</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Call Started</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DialSource__Caller_ID_DS__c</fullName>
        <description>Caller ID that appeared to the prospect</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Caller ID</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DialSource__DS_Get_Recording__c</fullName>
        <description>Link to the call recording</description>
        <formula>if(DialSource__Recording_ID_DS__c != &quot;&quot;, HYPERLINK(&apos;/apex/DialSource__PlayRecording?id=&apos;+Id,&quot;Play Recording&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DS Get Recording</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DialSource__Inbound_Agent_Wait_Time_secs__c</fullName>
        <description>Time the agents were waiting to receive the inbound call</description>
        <label>Inbound Agent Wait Time (secs)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DialSource__Inbound_DNIS_Name__c</fullName>
        <description>Name associated with the Inbound DNIS</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Inbound DNIS Name</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DialSource__Inbound_DNIS__c</fullName>
        <description>The Inbound Number that was dialed by the prospect</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Inbound DNIS</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DialSource__Inbound_Prospect_Wait_Time_secs__c</fullName>
        <description>Time in which the prospect was waiting for an agent to answer</description>
        <label>Inbound Prospect Wait Time (secs)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DialSource__Inbound_Queue__c</fullName>
        <description>Name of the Inbound Queue in which the Inbound DNIS is associated to</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Inbound Queue</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DialSource__RTPQ_Group_ID__c</fullName>
        <description>DialSource Agent Group ID used to track which RTPQ group the call was presented to</description>
        <label>RTPQ Group ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DialSource__RTPQ_Wait_Time__c</fullName>
        <description>Time in which the record sat in the queue before it was dialed by a rep</description>
        <label>RTPQ Wait Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DialSource__Recording_ID_DS__c</fullName>
        <description>External DialSource ID used to track the call recording</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Recording ID</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DialSource__Recycled_Until_DS__c</fullName>
        <description>Datetime the related record is Recycled Until</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Recycled Until</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DialSource__Session_ID_DS__c</fullName>
        <description>External DialSource ID used to reference the DS Session this call is related to</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Session ID</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DialSource__Voicemail_DS__c</fullName>
        <description>Name of the Voicemail recording that was left to the prospect</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Voicemail</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Date_Finished__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Event Date Finished</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Event Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <description>Type of Event</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Classification__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled Phone Call</fullName>
                </value>
                <value>
                    <fullName>In Person</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
                <value>
                    <fullName>Video Conference</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Modified_Date_Time__c</fullName>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Project_Task_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Project Task ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modified_By_Role__c</fullName>
        <description>Used for reporting only to populate the users role.</description>
        <formula>LastModifiedBy.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Modified By Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Created_By_Role__c</fullName>
        <formula>CreatedBy.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Created By Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Outbound Call</fullName>
                </value>
                <value>
                    <fullName>Inbound Call</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Unscheduled Visit</fullName>
                </value>
                <value>
                    <fullName>CLOB Referral</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Postal Mail</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Campaign Follow Up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cnx__CTIInfo__c</fullName>
        <description>Additional CTI Information</description>
        <encryptionScheme>None</encryptionScheme>
        <label>CTI Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__UniqueId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>UniqueId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>Julia_s_Tasks</fullName>
        <booleanFilter>1 AND 2 AND (3 or 4)</booleanFilter>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.CREATED_DATE</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>ACTIVITY.TASK</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>jrobi</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>EVENT.END_DATE_TIME</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <label>Julia&apos;s Tasks</label>
        <sharedTo>
            <group>LOB_Admin_Group</group>
            <role>GBD_Manager_Sales_Operations</role>
            <role>GBD_Sales_Operations_Specialists</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>My_Activities_Last_7_Days1</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>Type__c</columns>
        <columns>TASK.STATUS</columns>
        <columns>ACTIVITY.TASK</columns>
        <columns>Comments__c</columns>
        <columns>Event_Description__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>Altair&apos;s My Activities Last 7 Days</label>
        <sharedTo>
            <roleAndSubordinates>Eyewear_CRM_Support</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Events</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Events</label>
    </listViews>
    <listViews>
        <fullName>My_Open_Activities</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Activities</label>
    </listViews>
    <listViews>
        <fullName>This_Week_s_Activities2</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>My Activities Last 7 Days</label>
        <sharedTo>
            <roleAndSubordinates>Optics_Leadership</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>